--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2024"
 crate-type = ["cdylib"]
 
 [dependencies]
-winapi = { version="0.3.9", features=["winuser"] }
+tokio = { version = "1.44.2", features = ["macros", "time", "rt-multi-thread"] }
+winapi = { version = "0.3.9", features = ["winuser", "processthreadsapi"] }
